src/App.css
@import url('https://fonts.googleapis.com/css?family=Domine&display=swap');

.body {
  background-color: grey;
  font-family: Century Gothic;
  color: black;
  width: 100vw;
  height: 100%;
  font-family: 'Domine', serif;
}

.scroll-links {
  color: black;
}

.navbar{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: nowrap;
  background-color: silver;
}

.name{
  text-align: center;
  font-weight: bold;
  font-size: 80px;
  color: white;
  background-color: black;
  margin-bottom: 0;
}

.nav-item{
  text-align:center;
  font-weight: bold;
  border-style: dotted;
  padding:auto;
  width: 30vw;
}

.about_title {
  font-size: 50px;
  margin-top: 50px;
  padding-bottom: 40px;
  text-decoration: underline;
  font-weight: bold;
  text-align: center;
  font-style: normal;
}

.header-image {
  display: block;
  width: 100vw;
  margin: auto;
}

.summary {
  font-size: 30px;
  padding-left: 50px;
  padding-top: 40px;
  text-indent: 60px;
  padding: 1em 1em 2em 1em;
}

.black-background {
  background-color: black;
  color: white;
  font-style: italic;
  padding: 1em 0 2em 0;
}

.portrait {
  width: 300px;
  height: 300px;
  display: block;
  margin: auto;
  border-radius: 100%;
}

.project-item  {
  margin-top: 50px;
  padding: 0 3% 0 3%;
  width:25vw;
  height: 228px; 
}

.project{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.project_title {
  font-size: 50px;
  margin-top: 50px;
  padding-bottom: 40px;
  text-decoration: underline;
  font-weight: bold;
  text-align: center;
  font-style: normal;
  margin-top: 0px;
  background-color: white;
  color: black;
  padding: 1em 0 1em 0;
  border-bottom-style: solid;
  border-top-style: solid;
  border-top-color: gray;
}

.contact{
  padding-left: 2em;
  padding-top:0;
  border-style: solid;
}

.contact-header{
  margin-top:100px;
  margin-bottom: 30px;
  text-decoration:underline;
  font-weight:bold;
}

.footer{
  border-style: solid;
  display: flex;
}

.icon{
  margin-left:100px;
  margin-top:30px;
  padding-top:15px; 
  padding-bottom: 22px;
  margin-bottom: 0;
}

.overlay {
  border: solid;
  border-color: white;
  position: absolute;
  top: 0;
  bottom: 0;
  margin-top: 50px;
  margin-left: 1%;
  margin-right: 1%;
  width:24.5vw;
  height: 228px; 
  opacity: 0;
  transition: .5s ease;
  background-color: black;
}

.project-container:hover .overlay {
  opacity: 0.8;
}

.project-container {
  position: relative;
  margin-left: 1%;
  margin-right: 1%;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.link{
  color: black;
}

@media screen and (max-width: 768px){
  .project-item{
    width:50vw;
  }
  .overlay{
    width: 49vw;
  }
}

@media screen and (max-width: 682px) {
  .contact h1{
    font-size: 10vw;
  }
  .link{
    font-size: 8vw;
  }
}

@media screen and (max-width: 578px) {
  .nav-item{
    font-size: 5vw;
  }

  .portrait{
    width: 100vw;
    margin-bottom: 30px;
  }

  .summary{
    font-size: 20px;
  }
}

@media screen and (max-width: 460px) {
  .project-item{
    width: 100vw;
  }

  .overlay{
    width: 98vw;
  }
}

